style.css
/* heading */
.center {
    text-align: center;
}

/* dark theme */
body.dark-theme {
    background-color: black;
    color: white;
}

body.dark-theme #hand {
    background-color: darkslateblue;
}

body.dark-theme .card {
    background-color: darkcyan;
    border-color: white;
}

body.dark-theme .card:hover {
    border-color: yellow;
}

body.dark-theme .cell {
    background-color: gray;
    border-color: white;
}

body.dark-theme .cell:hover {
    border-color: yellow;
}

/* game board */
.row {
    display: flex;
    justify-content: center;
    align-items: center;
}

.cell {
    border: 1px solid black;
    border-radius: 5%;
    min-width: 10em;
    min-height: 10em;
    margin: 1em;
}

/* card hand */
#hand {
    background-color: darkblue;
    border-top: 1px solid black;
    display: flex;
    justify-content: center;
    gap: 1em;
    flex: 1;
}

.card {
    border: 1px solid black;
    border-radius: 5%;
    width: 10em;
    height: 10em;
    margin: 1em;
}

.player {
    background-color: aqua;
}

.opponent {
    background-color: red;
}

.card:hover {
    transform: scale(1.05);
    border-color: rgb(224, 210, 2);
}

.card.placed:hover {
    transform: none;
    border-color: black;
}

img {
    width: 100%;
    height: auto; 
    object-fit: contain;
}

#container {
    height: 100%;
    border-collapse: collapse;
}

